# shopify-unlock

./: .dockerignore  .env.development  .env.example  .env.staging  .gitignore  .graphqlrc.ts  .npmrc  .opencommitignore  Dockerfile  README.md  components.json  docker-compose.yaml  package.json  plate-components.json  pnpm-lock.yaml  shopify.app.development.toml  shopify.app.production.toml  shopify.app.staging.toml  shopify.web.toml  tailwind.config.ts  tsconfig.json  types.d.ts  vite.config.ts
.github/workflows/: deploy-shopify-app.yml
app/: root.tsx  shopify.server.ts
app/.server/: public-api-utils.ts
app/components/: TargetProductsOrCollections.tsx
app/routes/: app._index copy.tsx  app._index.tsx  app.create-campaign.tsx  app.customers.tsx  app.settings.tsx  app.tsx  public-api.connect.ts  public-api.evaluate-gate.ts  public-api.linked-customer.ts  public-api.product-gate.ts
app/types/: admin.generated.d.ts  admin.types.d.ts
deploy/production/: render.yaml
deploy/staging/: render.yaml
extensions/offline-connect/: .shopifyignore  shopify.extension.toml
extensions/offline-connect-src/: package.json  tailwind.config.extension.ts  tsconfig.json  vite.config.js  vite.config.ts
extensions/offline-discount/: Cargo.toml  schema.graphql  shopify.extension.toml
extensions/offline-exclusive/: Cargo.toml  schema.graphql
extensions/offline-exclusive/locales/: en.default.json
extensions/offline-exclusive/src/: main.rs  run.development.graphql  run.graphql  run.rs  run.staging.graphql  tests.rs
prisma/: schema.prisma
src/: types.ts
src/lib/: utils.ts
(+137 files in other folders)
