[package]
name = "offline-exclusive"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_with = "1.13.0"
serde_json = "1.0"
sha2 = "0.9.8"
hmac = "0.11.0"
hex = "0.4.3"
shopify_function = "0.8.0"
graphql_client = "0.14.0"

[profile.release]
lto = true
opt-level = 'z'
strip = true

[features]
dev = []
staging = []
prod = []